clusters/easy-platform/apps/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp-system
  annotations:
    platform.lazycampus.com/domain-automation: enabled
spec:
  ingressClassName: traefik
  rules:
    - host: headlamp.lazycampus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  name: http
